fixed paypal logo on mobile

--- a/css/light.css
+++ b/css/light.css
@@ -1,6 +1,6 @@
 /*
 light.css
-@version 2020-12-27
+@version 2020-12-30
 - used in Live mode
 - embedded in the HTML by default
 - every other theme will be inserted after this one in thus inherit from it
@@ -1452,9 +1452,6 @@ grid {
 }
 #twitch {
     margin-right: 4px;
-}
-#paypal .banner {
-    width: 92.77px;
 }
 .google-ad {
     cursor: pointer;
